--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,6 @@
 	path = lib/create2-helpers
 	url = https://github.com/emo-eth/create2-helpers
 	branch = v0.1.3
+[submodule "lib/foundry-devops"]
+	path = lib/foundry-devops
+	url = https://github.com/Cyfrin/foundry-devops
